# Godot-Video-HUD-Test

./: .clangd  .gitignore  README.md  SConstruct  refresh_rate_getter.py  sender.py
ffmpeg_stream/: ffmpeg_stream.cpp  ffmpeg_stream.h  register_types.cpp  register_types.h
godot/: .gitignore  export_presets.cfg  ffmpeg.gdextension  ffmpeg.gdextension.uid  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot  theme.tres  wireframe.gdshader  wireframe.gdshader.uid
sender_cpp/: CMakeLists.txt  sender.cpp
